@@ -38,8 +38,8 @@ extern "C" {
 
 #define KERNAUX_MULTIBOOT2_HTAG_BASE_FLAG_OPTIONAL 1
 
-#define KERNAUX_MULTIBOOT2_HTAG_FLAGS_REQUIRE_CONSOLE (1 << 0)
-#define KERNAUX_MULTIBOOT2_HTAG_FLAGS_EGA_SUPPORT     (1 << 1)
+#define KERNAUX_MULTIBOOT2_HTAG_FLAGS_REQUIRE_CONSOLE KERNAUX_BITS(0)
+#define KERNAUX_MULTIBOOT2_HTAG_FLAGS_EGA_SUPPORT     KERNAUX_BITS(1)
 
 #include <kernaux/macro/packing_start.run>
 
