@@ -5,20 +5,22 @@
 extern "C" {
 #endif
 
+#include <kernaux/macro.h>
+
 #include <stdbool.h>
 
-#define KERNAUX_PRINTF_FMT_FLAGS_ZEROPAD   (1u <<  0u)
-#define KERNAUX_PRINTF_FMT_FLAGS_LEFT      (1u <<  1u)
-#define KERNAUX_PRINTF_FMT_FLAGS_PLUS      (1u <<  2u)
-#define KERNAUX_PRINTF_FMT_FLAGS_SPACE     (1u <<  3u)
-#define KERNAUX_PRINTF_FMT_FLAGS_HASH      (1u <<  4u)
-#define KERNAUX_PRINTF_FMT_FLAGS_UPPERCASE (1u <<  5u)
-#define KERNAUX_PRINTF_FMT_FLAGS_CHAR      (1u <<  6u)
-#define KERNAUX_PRINTF_FMT_FLAGS_SHORT     (1u <<  7u)
-#define KERNAUX_PRINTF_FMT_FLAGS_LONG      (1u <<  8u)
-#define KERNAUX_PRINTF_FMT_FLAGS_LONG_LONG (1u <<  9u)
-#define KERNAUX_PRINTF_FMT_FLAGS_PRECISION (1u << 10u)
-#define KERNAUX_PRINTF_FMT_FLAGS_ADAPT_EXP (1u << 11u)
+#define KERNAUX_PRINTF_FMT_FLAGS_ZEROPAD   KERNAUX_BITS(0)
+#define KERNAUX_PRINTF_FMT_FLAGS_LEFT      KERNAUX_BITS(1)
+#define KERNAUX_PRINTF_FMT_FLAGS_PLUS      KERNAUX_BITS(2)
+#define KERNAUX_PRINTF_FMT_FLAGS_SPACE     KERNAUX_BITS(3)
+#define KERNAUX_PRINTF_FMT_FLAGS_HASH      KERNAUX_BITS(4)
+#define KERNAUX_PRINTF_FMT_FLAGS_UPPERCASE KERNAUX_BITS(5)
+#define KERNAUX_PRINTF_FMT_FLAGS_CHAR      KERNAUX_BITS(6)
+#define KERNAUX_PRINTF_FMT_FLAGS_SHORT     KERNAUX_BITS(7)
+#define KERNAUX_PRINTF_FMT_FLAGS_LONG      KERNAUX_BITS(8)
+#define KERNAUX_PRINTF_FMT_FLAGS_LONG_LONG KERNAUX_BITS(9)
+#define KERNAUX_PRINTF_FMT_FLAGS_PRECISION KERNAUX_BITS(10)
+#define KERNAUX_PRINTF_FMT_FLAGS_ADAPT_EXP KERNAUX_BITS(11)
 
 enum KernAux_PrintfFmt_Type {
     KERNAUX_PRINTF_FMT_TYPE_NONE,
